# locoDemo2

./: .gitignore  CMakeLists.txt  README.md  sdkconfig
components/libhelix/: AACDecoderHelix.h  Allocator.h  Buffers.h  CMakeLists.txt  CommonHelix.h  ConfigHelix.h  MP3DecoderHelix.h  Vector.h  aacdec.h  helix_log.h  library.properties  mp3common.h
components/libhelix/src/libhelix-aac/: aaccommon.h  aacdec.c  assembly.h  buffersAAC.c  noiseless.c  sbr.c  statname.h
components/libhelix/src/libhelix-mp3/: assembly.h
components/libhelix/src/utils/: helix_memory.cpp
main/: CMakeLists.txt  CMakeLists.txt.static  audio.c  audio.h  loco.h  main.c
